// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "hsl(0, 0%, 100%)",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "hsl(0, 0%, 100%)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "height": 72,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 0.2,
            "padding": 12,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 0.2,
            "padding": 12,
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "hsl(0, 0%, 100%)",
            "flex": 1,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`renders correctly with header 1`] = `
<View
  style={
    Object {
      "backgroundColor": "hsl(0, 0%, 100%)",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "hsl(0, 0%, 100%)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "height": 72,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 0.2,
            "padding": 12,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "hsl(208, 7%, 46%)",
                  "fontSize": 36,
                },
                Array [
                  undefined,
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "hsla(0, 0%, 0%, 1)",
            "fontSize": 40,
            "fontWeight": "100",
            "letterSpacing": -0.5,
            "opacity": 1,
          }
        }
      >
        hello
      </Text>
      <View
        style={
          Object {
            "flex": 0.2,
            "padding": 12,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "hsl(208, 7%, 46%)",
                  "fontSize": 36,
                },
                Array [
                  undefined,
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "hsl(0, 0%, 100%)",
            "flex": 1,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`renders correctly with icons 1`] = `
<View
  style={
    Object {
      "backgroundColor": "hsl(0, 0%, 100%)",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "hsl(0, 0%, 100%)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "height": 72,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 0.2,
            "padding": 12,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "hsl(208, 7%, 46%)",
                  "fontSize": 36,
                },
                Array [
                  undefined,
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "hsla(0, 0%, 0%, 1)",
            "fontSize": 40,
            "fontWeight": "100",
            "letterSpacing": -0.5,
            "opacity": 1,
          }
        }
      >
        hello
      </Text>
      <View
        style={
          Object {
            "flex": 0.2,
            "padding": 12,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "hsl(208, 7%, 46%)",
                  "fontSize": 36,
                },
                Array [
                  undefined,
                  undefined,
                ],
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "hsl(0, 0%, 100%)",
            "flex": 1,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;
